--- a/assignment/product_list/templates/product_list/product_confirm_delete.html
+++ b/assignment/product_list/templates/product_list/product_confirm_delete.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h2><a href = "{% url 'products' %}">go back</a></h2>
+{% extends 'product_list/main.html' %}
+{% block content %}
 
-<form method="POST">
-    {% csrf_token %}
-    <p>Are you sure you want to delete this product: {{product}}</p>
-    <input type="submit" value="Submit">
-</form>
-</body>
-</html>
+<div class="header-bar">
+    <h2><a href = "{% url 'products' %}">&#8592; Backk</a></h2>
+</div>
+
+
+<div class="products-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are you sure you want to delete this product? "{{product}}"</p>
+        <input class="button" type="submit" value="Delete">
+    </form>
+</div>
+
+
+{% endblock content %}
