--- a/assignment/product_list/templates/product_list/product_form.html
+++ b/assignment/product_list/templates/product_list/product_form.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h2>Task Form</h2>
-<h2><a href = "{% url 'products' %}">Go back</a></h2>
-<form method='POST' action=''>
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="submit">
-</form>
+{% extends 'product_list/main.html' %}
+{% block content %}
 
-</body>
-</html>
+<div class="header-bar">
+    <h2><a href = "{% url 'products' %}">&#8592; Back</a></h2>
+</div>
+
+<div class="products-body">
+    <form method='POST' action=''>
+        {% csrf_token %}
+        {{form.as_p}}
+        <input class="button" type="submit" value="submit">
+    </form>
+</div>
+
+{% endblock content %}
